fix: always display entire page in dark mode

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -81,8 +81,6 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    @apply dark;
-  }
+body {
+  @apply dark;
 }
